--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-file-system": "~18.0.12",
     "expo-image-picker": "~16.0.6",
     "expo-media-library": "~17.0.6",
+    "expo-sharing": "^12.0.0",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.9",
